--- a/src/app/screen/admin-layout/admin-layout.component.html
+++ b/src/app/screen/admin-layout/admin-layout.component.html
@@ -1,1 +1,32 @@
-<p>admin-layout works!</p>
+<header class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="javascript:;" routerLink="" >Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="/admin/dashboard" href="javascript:;">Dashboard</a>
+              </li>
+              
+              <li class="nav-item ">
+                <a class="nav-link " routerLink="/admin/danh-muc" href="javascript:;" >
+                  Quản lý danh mục
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link " routerLink="/admin/truyen-tranh" href="javascript:;" >
+                  Quản lý truyện tranh
+                </a>
+              </li>
+            </ul>
+            
+          </div>
+        </div>
+      </nav>
+</header>
+<main class="container">
+    <router-outlet></router-outlet>
+</main>
