--- a/src/app/screen/client-layout/client-layout.component.html
+++ b/src/app/screen/client-layout/client-layout.component.html
@@ -7,25 +7,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" routerLink="danh-muc" href="javascript:;" >
-                  Comedy
-                </a>
-                <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul> -->
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" routerLink="/admin" aria-current="page" href="javascript:;">Admin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" routerLink="/admin" aria-current="page" href="javascript:;">Chuyển sinh</a>
+              <li class="nav-item" *ngFor="let item of cates">
+                <a class="nav-link active" [routerLink]="['/danh-muc', item.id]" aria-current="page" >{{item.name}}</a>
               </li>
             </ul>
             
