--- a/src/app/screen/client-layout/client-layout.component.html
+++ b/src/app/screen/client-layout/client-layout.component.html
@@ -1,22 +1,34 @@
+
 <header class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" routerLink="" href="javascript:;">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item" *ngFor="let item of cates">
-                <a class="nav-link active" [routerLink]="['/danh-muc', item.id]" aria-current="page" >{{item.name}}</a>
-              </li>
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
+  <div class="top container">
+    <img src="https://thichdoctruyen.com/images/logo.png" alt="">
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <div  class="container-fluid">
+      <a class="navbar-brand" routerLink="" href="javascript:;">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item" *ngFor="let item of cates">
+            <a class="nav-link active" routerLinkActive="active"  routerLink="/danh-muc/{{item.id}}" aria-current="page">{{item.name}}</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
 </header>
 <main class="container">
-    <p>Nội dung ng content của client</p>
+  <div class="container-fluid">
     <router-outlet></router-outlet>
+
+  </div>
 </main>
+<div class="container footer">
+  Truyện thuộc bản quyền của dunvph10007@fpt.edu.vn
+  <br>
+  Mọi thông tin liên hệ: 0935868633
+</div>
