--- a/src/app/screen/home/home.component.html
+++ b/src/app/screen/home/home.component.html
@@ -1,11 +1,22 @@
+<h3>DANH SÁCH TRUYỆN</h3>
+<div class="search form-group col-6">
+	<input class="form-control" type="text" placeholder="search">
+</div>
 <div class="row">
-	<div class="col-3" *ngFor="let item of counter(10)">
-		<div class="card" style="width: 18rem;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="Card image cap">
-			<div class="card-body">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				<a href="#" class="btn btn-primary">Go somewhere</a>
+	<div class="col-3" *ngFor="let item of dataOfComic">
+		<div class="col-12" >
+			<div class="card" >
+				<img style=" height: 150px;" class="card-img-top" [src]="item.image">
+				<div class="card-body">
+					<h5 style="font-size: 14px" class="card-title">{{item.name}}</h5>
+					<p>
+						Trạng thái: <strong style="font-size: 12px">{{item.status? 'Hoàn thành': 'Chưa hoàn thành'}}</strong>
+					</p>
+					<p>
+						Thể loại: <strong style="font-size: 12px">{{item.category.name}}</strong>
+					</p>
+					<a routerLink="/detail/{{item.id}}" class="btn btn-primary">Chi tiết</a>
+				</div>
 			</div>
 		</div>
 	</div>
