--- a/src/app/screen/admin/qt-comic/qt-comic.component.html
+++ b/src/app/screen/admin/qt-comic/qt-comic.component.html
@@ -1,40 +1,70 @@
-<div class="row">
-    <div class="col-6">
-        <div class="form-group">
-            <label for="">Tìm kiếm</label>
-            <input type="text" class="form-control" 
-                    [value]="keyword" (keyup)="search($event)">        
-        </div>
+<div class="row utility">
+  <div class="col-6">
+    <div class="form-group">
+      <label for="">Tìm kiếm</label>
+      <input type="text" class="form-control" [value]="keyword" (keyup)="search($event)">
     </div>
+  </div>
+  <div class="col-2">
+    <div class="form-group">
+      <label for="">Lọc theo danh mục</label>
+      <select  class="form-control" (change)="filterByCategory($event)" id="">
+        <option [value]="cateIdOrAuthorForAll">Tất cả</option>
+        <option [value]="item.id" *ngFor="let item of dataOfCategory" >{{ item.name }}</option>
+      </select>
+    </div>
+
+  </div>
+  <div class="col-2">
+    <div class="form-group">
+      <label for="">Lọc theo tác giả</label>
+      <select  class="form-control" (change)="filterByAuthor($event)" id="">
+        <option [value]="cateIdOrAuthorForAll">Tất cả</option>
+        <option [value]="item.id" *ngFor="let item of dataOfAuthor" [ngValue]="item.id">{{ item.name }}</option>
+      </select>
+    </div>
+  </div>
 </div>
 <table class="table table-striped">
-    <thead>
-        <th>#</th>
-        <th>Tên truyện</th>
-        <th>Danh mục</th>
-        <th>Tác giả</th>
-        <th>Hình ảnh</th>
-        <th>Trạng thái</th>
-        <th>
-            <a class="btn btn-success" routerLink="/admin/truyen-tranh/tao-moi">Tạo mới</a>
-        </th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of dataOfComic; index as i">
-            <td>{{i+1}}</td>
-            <td>{{item.name}}</td>
-            <td>{{item.category.name}}</td>
-            <td>{{item.author.name}}</td>
-            <td>
-                <img [src]="item.image" alt="">                
-            </td>
-            <td>{{item.status ? 'Hoàn thành' : 'Chưa hoàn thành'}}</td>
-            <td>
-                <a class="btn btn-warning" routerLink="/admin/truyen-tranh/update/{{item.id}}">Sửa</a>
-                
-                <button (click)="delete(item.id)" class="btn btn-danger">Xóa</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+  <thead>
+    <th>#</th>
+    <th>Tên truyện</th>
+    <th>Danh mục</th>
+    <th>Tác giả</th>
+    <th>Hình ảnh</th>
+    <th>Trạng thái</th>
+    <th>
+      <a class="btn btn-success" routerLink="/admin/truyen-tranh/tao-moi">Tạo mới</a>
+    </th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of dataOfComic; index as i">
+      <td>{{start + i}}</td>
+      <td>{{item.name}}</td>
+      <td>{{item.category.name}}</td>
+      <td>{{item.author.name}}</td>
+      <td>
+        <img [src]="item.image" alt="">
+      </td>
+      <td>{{item.status ? 'Hoàn thành' : 'Chưa hoàn thành'}}</td>
+      <td>
+        <a class="btn btn-warning" routerLink="/admin/truyen-tranh/update/{{item.id}}">Sửa</a>
 
+        <button (click)="delete(item.id)" class="btn btn-danger">Xóa</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<nav aria-label="...">
+  <ul class="pagination">
+    <li class="page-item {{current==1?'disabled':''}}">
+      <button class="page-link" (click)="paginate(current-1)"  tabindex="-1">Previous</button>
+    </li>
+      <li *ngFor="let item of arr, index as i" class="page-item {{i+1==current ? 'active': ''}}">
+        <button class="page-link" (click)="paginate(i+1)" >{{i+1}} <span class="sr-only">(current)</span></button>
+      </li>
+    <li class="page-item {{current==totalPage?'disabled':''}}">
+      <button class="page-link" (click)="paginate(current+1)" >Next</button>
+    </li>
+  </ul>
+</nav>
