--- a/src/app/screen/admin/update-truyentranh/update-truyentranh.component.html
+++ b/src/app/screen/admin/update-truyentranh/update-truyentranh.component.html
@@ -67,6 +67,9 @@
               Image is required.
             </div>
           </div>
+          <div *ngIf="checkIamgeInvalid" class="alert alert-danger">
+            Types of image are jpg, png, jpeg!
+          </div>
           <div class="picture">
             <img [src]="imageUrl" alt="">
           </div>
@@ -83,7 +86,7 @@
         </div>
       </div>
       <div class="text-center">
-        <button [disabled]="profileForm.invalid" class="btn btn-success" type="submit">Lưu</button>
+        <button [disabled]="profileForm.invalid || checkIamgeInvalid" class="btn btn-success" type="submit">Lưu</button>
       </div>
     </form>
   </div>
